# AtlasQueue

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_users_auth.py
benchmarks/: api_submit_benchmark.py
deploy/grafana/dashboards/: atlasqueue-overview.json  dashboard.yml
deploy/prometheus/: prometheus.yml
docs/: api.md  architecture.md  database-schema.md  demo.md  performance.md  production-readiness-checklist.md  runbook.md  sequence-diagrams.md
docs/adr/: 001-postgres-source-of-truth.md  002-priority-queues.md  003-jwt-rbac.md  004-failure-handler.md
docs/interview/: system-design.md
docs/reviews/: phase-0.md  phase-1.md  phase-2.md  phase-3.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/pages/: DLQ.tsx  Overview.tsx  TaskDetail.tsx  Tasks.tsx  Workers.tsx
scripts/: export_openapi.py
src/atlasqueue/: __init__.py
src/atlasqueue/api/: errors.py  main.py
src/atlasqueue/api/middleware/: auth.py  request_id.py
src/atlasqueue/api/routes/: auth.py  v1.py
src/atlasqueue/application/dto/: mappers.py  task_dto.py
src/atlasqueue/application/services/: queue_manager.py  task_failure_handler.py
src/atlasqueue/domain/: exceptions.py
src/atlasqueue/domain/entities/: task.py  worker.py
src/atlasqueue/domain/ports/: repositories.py
src/atlasqueue/domain/value_objects/: enums.py
src/atlasqueue/infrastructure/di/: container.py
src/atlasqueue/infrastructure/http/: webhook_client.py
src/atlasqueue/infrastructure/observability/: metrics.py  telemetry.py
src/atlasqueue/infrastructure/persistence/: database.py  models.py  repositories.py
src/atlasqueue/infrastructure/redis/: queue_backend.py
src/atlasqueue/scheduler/: main.py
src/atlasqueue/sdk/: client.py  decorators.py
src/atlasqueue/shared/: __init__.py  config.py  logging.py
src/atlasqueue/worker/: example_tasks.py  main.py  pool.py
src/atlasqueue/worker/executor/: python_executor.py
tests/: conftest.py
tests/api/: test_auth.py  test_v1_routes.py
tests/integration/: test_redis_queue.py  test_task_flow.py
tests/unit/: test_api_auth.py  test_domain_exceptions.py  test_task_domain.py  test_task_failure_handler.py  test_webhook_validation.py
