[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlasqueue"
version = "0.1.0"
description = "Production-quality distributed task queue"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Atlas Queue" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "python-multipart>=0.0.17",
    "PyJWT>=2.9.0",
    "bcrypt>=4.2.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres,redis]>=4.9.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
    "types-redis>=4.6.0",
]

[project.scripts]
atlasqueue-api = "atlasqueue.api.main:run"
atlasqueue-worker = "atlasqueue.worker.main:run"
atlasqueue-scheduler = "atlasqueue.scheduler.main:run"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/atlasqueue"]

[tool.hatch.build.targets.sdist]
include = ["src/atlasqueue", "alembic", "alembic.ini", "README.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: tests requiring Postgres and Redis",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"src/atlasqueue/infrastructure/redis/**" = ["ASYNC109"]
"src/atlasqueue/domain/ports/**" = ["ASYNC109"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["atlasqueue"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["testcontainers.*", "redis.*", "slowapi.*", "jwt.*", "bcrypt.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["atlasqueue"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
fail_under = 60
